# localization

./: .gitignore  CMakeLists.txt  README.md  example.rviz  package.xml
cfg/: mcd_kth.yaml  mcd_ntu.yaml  mcd_tuhh.yaml  mcd_viral.yaml
launch/: mcd_viral_kth.launch  mcd_viral_ntu.launch  mcd_viral_tuhh.launch
src/: localization_node.cpp
src/localization/: CMakeLists.txt  localization.cpp  localization.h
src/types/: CMakeLists.txt  types_edge_se3range.cpp  types_edge_se3range_offset.cpp
